merged liferay-config-expectation